fix home title spacing, and main site name spacing

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -49,6 +49,7 @@
   align-items: center;
   background-color: var(--primary-background-color);
   text-shadow: var(--primary-accent-color);
+  padding: 1rem;
 }
 
 .home-title > h1 {
